--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
 		"dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/cmd/main.ts",
 		"start": "cross-env NODE_ENV=production node -r tsconfig-paths/register ./dist/cmd/main.js",
 		"test": "rm -rf __tests__/coverage && jest --clearCache && cross-env NODE_ENV=development jest",
-		"format": "prettier --write \"src/**/*.ts\""
+		"format": "prettier --write \"src/**/*.ts\"",
+		"create:migration": "sequelize-cli migration:generate --name",
+		"create:seeder": "sequelize-cli seed:generate --name",
+		"migrate:dev": "rm -rf dist && cross-env NODE_ENV=development && tsc --project tsconfig.test.json && sequelize-cli db:migrate",
+		"migrate:prod": "rm -rf dist && cross-env NODE_ENV=production && tsc --project tsconfig.test.json && sequelize-cli db:migrate",
+		"seed:dev": "rm -rf dist && cross-env NODE_ENV=development && tsc --project tsconfig.test.json && node -r tsconfig-paths/register ./database/seeders",
+		"seed:prod": "rm -rf dist && cross-env NODE_ENV=production && tsc --project tsconfig.test.json && node -r tsconfig-paths/register ./database/seeders"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
@@ -22,12 +28,14 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/mongoose": "^5.11.97",
 		"@types/node-cron": "^3.0.11",
+		"@types/sequelize": "^4.28.20",
 		"cross-env": "^7.0.3",
 		"eslint": "^9.9.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"jest": "^29.7.0",
 		"prettier": "^3.3.3",
+		"sequelize-cli": "^6.6.2",
 		"ts-jest": "^29.2.5",
 		"ts-loader": "^9.5.1",
 		"ts-node-dev": "^2.0.0",
@@ -47,6 +55,8 @@
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.6.1",
+		"mysql2": "^3.11.3",
+		"sequelize": "^6.37.5",
 		"uuid": "^11.0.2"
 	}
 }
