--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/cmd/main.ts",
 		"start": "cross-env NODE_ENV=production node -r tsconfig-paths/register ./dist/cmd/main.js",
 		"test": "rm -rf __tests__/coverage && jest --clearCache && cross-env NODE_ENV=development jest",
-		"format": "prettier --write \"src/**/*.ts\"",
+		"format": "prettier --write \"src/**/*.ts\" \"database/**/*.js\"",
 		"create:migration": "sequelize-cli migration:generate --name",
 		"create:seeder": "sequelize-cli seed:generate --name",
 		"migrate:dev": "rm -rf dist && cross-env NODE_ENV=development && tsc --project tsconfig.test.json && sequelize-cli db:migrate",
