--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,44 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
+            - name: Deploy to Development Server
+              if: github.event.workflow_run.head_branch == 'dev'
+              uses: appleboy/ssh-action@master
+              with:
+                  host: ${{ secrets.SSH_HOST }}
+                  username: ${{ secrets.SSH_USERNAME }}
+                  key: ${{ secrets.SSH_PRIVATE_KEY }}
+                  passphrase: ${{ secrets.SSH_PASSPHRASE }}
+                  port: 22
+                  script: |
+                      # Pull the latest Development Docker image
+                      docker pull ${{ secrets.DOCKER_USERNAME }}/bhakti-portfolio-api-dev:latest
+
+                      # Navigate to the application directory
+                      cd ~/app/bhakti-portfolio/bhakti-portfolio-api-dev
+                      git pull origin dev
+
+                      # Update the .env file
+                      rm -f .env.dev
+                      echo "NODE_ENV=production" >> .env.dev
+                      echo "DOCKER_ENVIRONMENT=true" > .env.dev
+                      echo "PORT=${{ secrets.DEV_PORT }}" >> .env.dev
+                      echo "BASE_URL=${{ secrets.DEV_BASE_URL }}" >> .env.dev
+                      echo "JWT_SECRET_KEY=${{ secrets.DEV_JWT_SECRET_KEY }}" >> .env.dev
+                      echo "MAIN_MYSQL_DB_HOST=${{ secrets.DEV_MAIN_MYSQL_DB_HOST }}" >> .env.dev
+                      echo "MAIN_MYSQL_DB_USER=${{ secrets.DEV_MAIN_MYSQL_DB_USER }}" >> .env.dev
+                      echo "MAIN_MYSQL_DB_PASSWORD=${{ secrets.DEV_MAIN_MYSQL_DB_PASSWORD }}" >> .env.dev
+                      echo "MAIN_MYSQL_DB_NAME=${{ secrets.DEV_MAIN_MYSQL_DB_NAME }}" >> .env.dev
+                      echo "MAIN_MYSQL_DB_PORT=${{ secrets.DEV_MAIN_MYSQL_DB_PORT }}" >> .env.dev
+                      echo "UTILITY_MONGO_DB_DSN=${{ secrets.DEV_UTILITY_MONGO_DB_DSN }}" >> .env.dev
+                      echo "UTILITY_MONGO_DB_NAME=${{ secrets.DEV_UTILITY_MONGO_DB_NAME }}" >> .env.dev
+
+                      # Restart the Docker container with the new image
+                      docker-compose -f docker/docker-compose.dev.yml up -d --force-recreate
+
+                      # Clean up unused Docker resources
+                      docker system prune -a -f
+
             - name: Deploy to Production Server
               if: github.event.workflow_run.head_branch == 'main' || github.event.workflow_run.head_branch == 'staging'
               uses: appleboy/ssh-action@master
