--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
         branches:
             - main
             - staging
+            - dev
     pull_request:
         branches:
             - main
             - staging
+            - dev
 
 jobs:
     ci:
@@ -34,6 +36,12 @@ jobs:
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
+
+            - name: Build and push Development Docker image
+              if: (github.event_name == 'pull_request' && github.base_ref == 'dev') || (github.event_name == 'push' && github.ref == 'refs/heads/dev')
+              run: |
+                  docker build -t ${{ secrets.DOCKER_USERNAME }}/bhakti-portfolio-api-dev:latest -f docker/dockerfile .
+                  docker push ${{ secrets.DOCKER_USERNAME }}/bhakti-portfolio-api-dev:latest
 
             - name: Build and push Production Docker image
               if: (github.event_name == 'pull_request' && (github.base_ref == 'main' || github.base_ref == 'staging')) || (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/staging'))
